@@ -100,6 +100,7 @@ class T(unittest.TestCase):
                          _('Continue'))
         self.assertFalse(self.app.w('closed_button').get_property('visible'))
         self.assertFalse(self.app.w('subtitle_label').get_property('visible'))
+        self.assertFalse(self.app.w('ignore_future_problems').get_property('visible'))
 
     def test_package_crash_layout(self):
         '''
@@ -138,11 +139,13 @@ class T(unittest.TestCase):
         | [ apport ] The application Apport has closed unexpectedly.      |
         |                                                                 |
         |            [x] Send an error report to help fix this problem.   |
+        |            [ ] Ignore future problems of this program version.  |
         |                                                                 |
         | [ Show Details ]                 [ Leave Closed ]  [ Relaunch ] |
         +-----------------------------------------------------------------+
         '''
         self.app.report['ProblemType'] = 'Crash'
+        self.app.report['CrashCounter'] = '1'
         self.app.report['Package'] = 'apport 1.2.3~0ubuntu1'
         with tempfile.NamedTemporaryFile() as fp:
             fp.write('''[Desktop Entry]
@@ -166,6 +169,9 @@ Type=Application''')
                          _('Relaunch'))
         self.assertTrue(self.app.w('closed_button').get_property('visible'))
         self.assertFalse(self.app.w('subtitle_label').get_property('visible'))
+        self.assertTrue(self.app.w('ignore_future_problems').get_property('visible'))
+        self.assertTrue(self.app.w('ignore_future_problems').get_label().endswith(
+            'of this program version'))
 
     def test_system_crash_layout(self):
         '''
@@ -175,11 +181,13 @@ Type=Application''')
         |          computer                                             |
         |                                                               |
         |            [x] Send an error report to help fix this problem. |
+        |            [ ] Ignore future problems of this type.           |
         |                                                               |
         | [ Show Details ]                                 [ Continue ] |
         +---------------------------------------------------------------+
         '''
         self.app.report['ProblemType'] = 'Crash'
+        self.app.report['CrashCounter'] = '1'
         self.app.report['Package'] = 'bash 5'
         GLib.idle_add(Gtk.main_quit)
         self.app.ui_present_report_details(True)
@@ -198,6 +206,9 @@ Type=Application''')
         self.assertEqual(self.app.w('continue_button').get_label(),
                          _('Continue'))
         self.assertFalse(self.app.w('closed_button').get_property('visible'))
+        self.assertTrue(self.app.w('ignore_future_problems').get_property('visible'))
+        self.assertTrue(self.app.w('ignore_future_problems').get_label().endswith(
+            'of this type'))
 
     def test_system_crash_from_console_layout(self):
         '''
@@ -242,6 +253,9 @@ Type=Application''')
         self.app.ui_present_report_details(True)
         self.assertEqual(self.app.w('title_label').get_text(),
             _('Sorry, apport has closed unexpectedly.'))
+
+        # no crash counter
+        self.assertFalse(self.app.w('ignore_future_problems').get_property('visible'))
 
     @patch.object(GTKUserInterface, 'can_examine_locally')
     def test_examine_button(self, *args):
